--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,32 @@ h1, h2, h3, p, ul, li {
   padding-top: 32px;
   padding-bottom: 32px;
 
+  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
 }
+.nav-list {position: relative;}
+
+.nav-item::after {
+  content: '';
+  display: block;
+
+  position: absolute;
+
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background: #2196f3;
+  bottom: 0px;
+  transform: scale(0);
+  opacity: 0;
+
+  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+}
+.nav-item:hover::after,
+.nav-item:focus::after {
+  opacity: 1;
+  transform: scale(1);
+}
+
 .contacts-item:hover,
 .contacts-item:focus {
   color: var(--primary-txt-clr);
@@ -120,6 +145,7 @@ h1, h2, h3, p, ul, li {
   padding-top: 32px;
   padding-bottom: 32px;
 
+  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
 }
 .main-contacts {
   letter-spacing: var(--secondary-leter-spacing);
@@ -246,10 +272,10 @@ h1, h2, h3, p, ul, li {
 
   top: 0;
   left: 0;
-
+  
   width: 100%;
   height: 100%;
-  
+     
   background: rgba(0, 0, 0, 0.2);
   z-index: 3;
 }
@@ -267,12 +293,14 @@ h1, h2, h3, p, ul, li {
   width: 30px;
   height: 30px;
   
-  background: #FFFFFF;
+  background-image: url('../images/close.svg');
+  background-size: contain;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   border-radius: 50%;
 
-  cursor: pointer;}
+  cursor: pointer;
+}
 
 
 
@@ -441,7 +469,7 @@ h1, h2, h3, p, ul, li {
   background-color: #ffffff;}
 
 .team {
-background-color: #F5F4FA;
+  background-color: #F5F4FA;
 }
 .team-img {
   margin-bottom: 30px;
@@ -472,6 +500,8 @@ background-color: #F5F4FA;
   fill: var(--fill-color);
   background-color: #ffffff;
   border-radius: 50%;
+
+  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
 }
 
 .team-link-icon {
@@ -495,6 +525,8 @@ background-color: #F5F4FA;
   fill: var(--fill-color);
   border: 1px solid #afb1b8;
   border-radius: 4px;
+
+  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
 }
 .clients_link:hover,
 .clients_link:focus {
@@ -573,6 +605,8 @@ background-color: #F5F4FA;
   width: 44px;
   height: 44px;
   border-radius: 50%;
+
+  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
 }
 
 .footer_socials-tittle {
@@ -632,6 +666,8 @@ background-color: #F5F4FA;
   padding: 6px 22px;
 
   user-select: none;
+
+  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
 }
 .btn-list {
   justify-content: center;
@@ -664,8 +700,9 @@ background-color: #F5F4FA;
 .content-links {
   text-decoration: var(--main-text-decor);
   display: inline-block;
-}
 
+  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+}
 
 .content-img {
   display: block;
@@ -674,7 +711,8 @@ background-color: #F5F4FA;
 .content-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;}
+  gap: 30px;
+}
 
 .content-border {
   padding: 20px 24px;
@@ -682,7 +720,37 @@ background-color: #F5F4FA;
   border-bottom: 1px solid var(--project-border-color);
   border-left: 1px solid var(--project-border-color);
 }
-.content-items:hover {box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);}
+.content-links:hover, .content-items:focus {box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.content-links:hover .content-txt-thumb,
+.content-links:focus .content-txt-thumb {
+  transform: translateY(-100%)
+}
+
+.content-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.content-txt-thumb {
+  position: absolute;
+
+  height: 294px;
+  padding: 63px 24px;
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.content-txt {
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: var(--main-link-clr);
+}
+
 
 
 
