--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,8 @@ h1, h2, h3, p, ul, li {
   transform: scale(0);
   opacity: 0;
 
-  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-item:hover::after,
 .nav-item:focus::after {
@@ -257,8 +258,8 @@ h1, h2, h3, p, ul, li {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
   height: 581px;
   width: 528px;
   padding: 35px;
@@ -272,20 +273,36 @@ h1, h2, h3, p, ul, li {
 
   top: 0;
   left: 0;
-  
+ 
   width: 100%;
   height: 100%;
      
   background: rgba(0, 0, 0, 0.2);
   z-index: 3;
+  transition: opacity 350ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 1;
 }
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.4);
 
+}
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
 
-.banner-button-close {
+.button-close {
+  position: fixed;
+  top: 8px;
+  right: 8px;
+  cursor: pointer;
+  fill: #ffffff;
+  width: 30px;
+  height: 30px;
+  
+  
+}
+/* .banner-button-close {
   position: fixed;
   top: 8px;
   right: 8px;
@@ -298,11 +315,6 @@ h1, h2, h3, p, ul, li {
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   border-radius: 50%;
-
-  cursor: pointer;
-}
-
-
 
 
 
