--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ h1, h2, h3, p, ul, li {
 .nav-item:hover,
 .nav-item:focus {
   color: var(--primary-txt-clr);
+  
 }
 .nav-item {
   color: var(--main-txt-clr);
@@ -107,13 +108,13 @@ h1, h2, h3, p, ul, li {
   padding-top: 32px;
   padding-bottom: 32px;
 
-  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-list {position: relative;}
 
 .nav-item::after {
   content: '';
-  display: block;
+  display: inline-flex;
 
   position: absolute;
 
@@ -122,17 +123,33 @@ h1, h2, h3, p, ul, li {
   border-radius: 2px;
   background: #2196f3;
   bottom: 0px;
+  left: 0;
   transform: scale(0);
   opacity: 0;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
   opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .nav-item:hover::after,
-.nav-item:focus::after {
+.nav-item:focus::after,
+.nav-item.current {
   opacity: 1;
   transform: scale(1);
 }
+.current::after,
+.nav-item:hover::after,
+.nav-item:focus::after {
+  transform: scale(1);
+  opacity: 1;
+}
+
+
+
+
+
+
+
 
 .contacts-item:hover,
 .contacts-item:focus {
@@ -146,7 +163,7 @@ h1, h2, h3, p, ul, li {
   padding-top: 32px;
   padding-bottom: 32px;
 
-  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-contacts {
   letter-spacing: var(--secondary-leter-spacing);
@@ -253,12 +270,13 @@ h1, h2, h3, p, ul, li {
   user-select: none;
 }
 
-
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%,
+  -50%);
+  transition: 250ms ease-in;
   opacity: 1;
   height: 581px;
   width: 528px;
@@ -283,7 +301,8 @@ h1, h2, h3, p, ul, li {
   opacity: 1;
 }
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(1.4);
+  transform: translate(-50%, -50%);
+  transition: 250ms ease-in;
 
 }
 .backdrop.is-hidden {
@@ -300,24 +319,7 @@ h1, h2, h3, p, ul, li {
   width: 30px;
   height: 30px;
   
-  
 }
-/* .banner-button-close {
-  position: fixed;
-  top: 8px;
-  right: 8px;
-
-  width: 30px;
-  height: 30px;
-  
-  background-image: url('../images/close.svg');
-  background-size: contain;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-sizing: border-box;
-  border-radius: 50%;
-
-
-
 
 
 /* ОСОБЕННОСТИ */
@@ -428,7 +430,6 @@ h1, h2, h3, p, ul, li {
   bottom: 0;}
 
 .work-txt-thumb {
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
@@ -438,7 +439,6 @@ h1, h2, h3, p, ul, li {
   text-transform: uppercase;
 
   color: #FFFFFF;
-
 
   padding-top: 27px;
   align-items: center;
@@ -513,7 +513,8 @@ h1, h2, h3, p, ul, li {
   background-color: #ffffff;
   border-radius: 50%;
 
-  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-link-icon {
@@ -538,7 +539,8 @@ h1, h2, h3, p, ul, li {
   border: 1px solid #afb1b8;
   border-radius: 4px;
 
-  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients_link:hover,
 .clients_link:focus {
@@ -553,9 +555,6 @@ h1, h2, h3, p, ul, li {
 .clients_tittle {
   margin-bottom: 50px;
 }
-
-
-
 
 
 /* ФУТЕР */
@@ -618,7 +617,9 @@ h1, h2, h3, p, ul, li {
   height: 44px;
   border-radius: 50%;
 
-  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer_socials-tittle {
@@ -679,7 +680,9 @@ h1, h2, h3, p, ul, li {
 
   user-select: none;
 
-  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn-list {
   justify-content: center;
@@ -713,7 +716,7 @@ h1, h2, h3, p, ul, li {
   text-decoration: var(--main-text-decor);
   display: inline-block;
 
-  transition: 250ms cubic-bezier(0.1, 0.7, 1.0, 0.1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .content-img {
